# FocusMute

./: LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  config.rs  desktop.rs  engine.rs  main.rs  models.rs  process_icon.rs  state.rs  system.rs
src-tauri/tray-icons/: tray-muted.rgba  tray-unmuted.rgba
src/components/: ErrorBoundary.tsx  LogPanel.tsx  ProcessTable.tsx  RuleManager.tsx  SettingsPanel.tsx
src/hooks/: useDesktopEvents.ts
src/lib/: format.ts  i18n.tsx
src/stores/: useFocusMuteStore.ts
