[package]
name = "focusmute"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
parking_lot = "0.12.5"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.38.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
